modif getFirst et graphique